# MomoAI

./: .gitignore  CLAUDE.md  COHERENCE_VALIDATOR_IMPLEMENTATION_PLAN.md  DOCUMENTATION.md  LebensPlan.md  MATHEMATICAL_FOUNDATION.md  PROJECT_VISION.md  README.md  THE_GREAT_COHERENCE_DISASTER.md  WORKFLOW_QUICK_START.md  dvc.yaml  ernährung  mo  nx.json  package.json  params.yaml  pnpm-lock.yaml
MomoAI/: .pre-commit-config.yaml  AXIOM_BOOTSTRAP.md  AXIOM_HANDOVER.md  HANDOVER.md  Monorepo_coherence.md  README.md  SYSTEM_OVERVIEW.md  axiom  pyproject.toml
MomoAI/projects/: .gitkeep  README.md
MomoAI/projects/axiom/: .env.example  COHERENCE_IMPLEMENTATION_COMPLETE.md  COHERENCE_PIPELINE_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_PLAN.md  MINIMAL_CHAT_IMPLEMENTATION.md  README.md  code_coherence.md  docker-compose.yml  docker-start.sh  prompt_coherence.md  prompt_coherence_llms.md  pyproject.toml  requirements.txt  start.bat  start.py  start.sh  start_axiom_with_coherence.py  test_axiom.py
MomoAI/projects/axiom/axiom/: README.md
MomoAI/projects/axiom/axiom/backend/: main.py
MomoAI/projects/axiom/axiom/frontend/: index.html  manifest.json  sw.js
MomoAI/projects/axiom/backend/: main.py  models.py  system_message.txt  tools.py
MomoAI/projects/axiom/docs/archive/: AI_DEVELOPMENT_ANTIPATTERNS.md  AXIOM_DEVELOPMENT_ROADMAP.md  COHERENCE_IMPLEMENTATION_COMPLETE.md  HANDOVER_CONTEXT.md  IMPLEMENTATION_PLAN.md  OM_ANALYSIS.md  PHASE_2_PLANNING.md
MomoAI/projects/axiom/frontend/: index.html  script.js  style.css
MomoAI/projects/axiom/src/axiom/: __main__.py  anthropic_client.py  cli.py  core.py  system_message.txt
MomoAI/projects/coherence/: README.md  pyproject.toml
MomoAI/projects/coherence/code_checker/: Cargo.toml  README.md
MomoAI/projects/coherence/code_checker/src/: lib.rs  lib_old.rs  main.rs
MomoAI/projects/coherence/formal_contracts/: README.md  contract_language.py
MomoAI/projects/coherence/formal_verifier/: Cargo.toml  README.md
MomoAI/projects/coherence/formal_verifier/src/: lib.rs  main.rs
MomoAI/projects/core/knowledge/: pyproject.toml  quality_report.json
MomoAI/projects/core/onboarding/: __init__.py  agent_onboarding_system.py  codebase_navigator.py  command_trainer.py  progress_models.py  progress_tracker.py  workspace_mapper.py
MomoAI/projects/core/protocols/: pyproject.toml  quality_report.json
MomoAI/projects/core/quality/: __init__.py  code_analyzer.py  quality_gate_system.py  quality_metrics.py
MomoAI/projects/core/validation/: __init__.py  auto_halt_controller.py  coherence_scorer.py  context_validator.py  contradiction_detector.py  halt_controller.py  logical_coherence_validator.py  models.py  om_integration.py  pattern_matcher.py  prerequisite_checker.py  token_analyzer.py  token_efficiency_optimizer.py  validation_models.py
MomoAI/projects/momo/cycles/: README.md  pyproject.toml
MomoAI/projects/momo/interface/: pyproject.toml
MomoAI/projects/parsers/code-parser/: pyproject.toml  quality_report.json
MomoAI/projects/parsers/docs-parser/: pyproject.toml  quality_report.json
MomoAI/projects/tools/axiom/: .dockerignore  .env.example  .gitignore  HANDOVER.md  docker-compose.yml  docker-start.sh  tool_calls_1.md  tool_calls_2.md
MomoAI/projects/tools/om/: .om_scope_session.json  benchmark_runner.py  context_injection_benchmark_report.json  demo_agent_scoping.py  pyproject.toml  quality_report.json
MomoAI/research/: AI_DEVELOPMENT_ANTIPATTERNS.md
Momo_funding/: BACKTESTING_IMPLEMENTATION_PLAN.md  CRITICAL_TESTNET_ISSUE.md  HANDOVER_COMPLETE.md  OPTIMAL_SOLUTION.md  pyproject.toml
Momo_funding/trading_bot/: README.md  analyze_expansion_risk.py  check_binance_api_access.py  comprehensive_backtest.py  debug_symbol_discovery.py  dynamic_market_discovery.py  optimal_trading_system.py  parameter_optimization.py  scientific_trader.py  test_altcoin_strategy.py  test_binance_data_quality.py  test_connection.py  test_system.py
Momo_funding/trading_bot/backtesting/: historical_data_engine.py
Momo_funding/trading_bot/docs/: websockets.md
Momo_funding/trading_bot/execution/: binance_connector.py
Momo_funding/trading_bot/risk/: position_sizing.py
Momo_funding/trading_bot/strategies/: __init__.py  altcoin_correlation_matrix.py
code/libs/python/kb-playground/: .coverage  BENCHMARKING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_REPORT.md  README.md  dvc.yaml  project.json  pyproject.toml  simple_comparison.py  test_comprehensive_comparison.py  test_functionality.py  test_local_first.py
code/libs/python/momo-cmd/: .coverage  CLAUDE.md  README.md  project.json  pyproject.toml
code/libs/python/momo-graph/: .coverage  CLAUDE.md  README.md  project.json  pyproject.toml
code/libs/python/momo-kb/: .agent.md  CLAUDE.md  README.md  dvc.yaml  project.json  pyproject.toml
code/libs/python/momo-mom/: .coverage  IMPLEMENTATION.md  INTERACTIVE_SYSTEM_VALIDATION.md  README.md  project.json  pyproject.toml
code/libs/python/momo-petals/: .gitignore  .pdm-python  README.md  USAGE.md  project.json  pyproject.toml
code/libs/python/momo-runner/: README.md  project.json  pyproject.toml
code/libs/python/momo-store-document/: README.md  TEST_COVERAGE_SUMMARY.md  dvc.yaml  project.json  pyproject.toml
code/libs/python/momo-vector-store/: .coverage  .pdm-python  CLAUDE.md  MOMO_VECTOR_STORE_ANALYSIS.md  README.md  dvc.yaml  project.json  pyproject.toml
libs/python/momo-kb/: momo.yaml  project.json  pyproject.toml  pytest.ini
libs/python/momo-kb/momo_kb/: __init__.py  factory.py  pandas_backend.py
libs/python/momo-kb/scripts/: 05_real_world_example.py  momo.md
libs/python/momo-kb/tests/: __init__.py
libs/python/momo-logger/: README.md  dvc.yaml  project.json  pyproject.toml
libs/python/momo-logger/benchmarks/: README.md  concurrent_performance.py  momo.md  run.py
libs/python/momo-logger/momo_logger/: __init__.py  constants.py  factory.py  levels.py  main.py  momo.md  types.py
libs/python/momo-logger/scripts/: 04_formatter_demo.py  05_context_demo.py  06_comprehensive_example.py  run.py  test_all.py
(+13558 files in other folders)
