[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "projects/core/knowledge",
    "projects/core/protocols", 
    "projects/parsers/docs-parser",
    "projects/parsers/code-parser",
    "projects/tools/om",
    "projects/axiom",
    "projects/coherence",
    "projects/momo/interface",
    "projects/momo/cycles"
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]
ignore = ["S101"]  # Allow assert statements

[tool.ruff.lint.flake8-bandit]
hardcoded-tmp-directory = ["/tmp", "/var/tmp", "/dev/shm"]