[tool.coverage.run]
branch = true
source = [ "momo_kb" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]  
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=momo_kb"
asyncio_mode = "auto"

[project]
name = "momo-kb"
version = "0.1.0"
description = "Knowledge base system for Momo AI multi-agent architecture"
requires-python = ">=3.9,<3.13"
readme = 'README.md'
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "duckdb>=0.8.0",
    "sqlalchemy>=2.0.0",
    "momo-logger @ file:///home/vincent/Documents/Momo/MomoAI-nx/libs/python/momo-logger",
    "momo-vector-store @ file:///home/vincent/Documents/Momo/MomoAI-nx/libs/python/momo-vector-store",
    "momo-graph-store @ file:///home/vincent/Documents/Momo/MomoAI-nx/libs/python/momo-graph-store",
    "momo-store-document @ file:///home/vincent/Documents/Momo/MomoAI-nx/libs/python/momo-store-document",
    "dvc>=3.61.0",
]

[tool.hatch.build.targets.wheel]
packages = ["momo_kb"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "pyright>=1.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E", "F", "UP", "B", "SIM", "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
