[package]
name = "code_coherence_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
coherence_verifier = { path = "../formal_verifier" }
z3 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
# rustpython-parser = "0.3"  # Removed for simplified approach
regex = "1.0"

[lib]
name = "code_coherence_checker"
path = "src/lib.rs"

[[bin]]
name = "code_checker"
path = "src/main.rs"