[package]
name = "coherence_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
z3 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[lib]
name = "coherence_verifier"
path = "src/lib.rs"

[[bin]]
name = "coherence"
path = "src/main.rs"