[project]
name = "knowledge"
version = "0.1.0"
description = "Code knowledge database"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0", # Native vector support
    "sentence-transformers>=2.2.0",
    "mistralai>=1.0.0",
    "numpy>=1.24.0",
    "protocols", # Uses AI protocol types
    "voyageai>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
jina = [
    "transformers>=4.0.0",
    "torch>=1.9.0",
]

[tool.uv.sources]
protocols = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge"]
