[project]
name = "protocols"
version = "0.1.0"
description = "AI communication protocols"
requires-python = ">=3.11"
dependencies = [
    # Core protocols have no internal dependencies
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# No workspace sources needed - protocols is a base module

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocols"]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
