[project]
name = "code-parser"
version = "0.1.0"
description = "Code parsing and AST analysis for populating knowledge database"
requires-python = ">=3.11"
dependencies = [
    "knowledge",
    "protocols",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src/code_parser" = "code_parser"

[tool.uv.sources]
knowledge = { workspace = true }
protocols = { workspace = true }

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
