[tool.coverage.run]
branch = true
source = ["kb_playground"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=kb_playground"
asyncio_mode = "auto"

[project]
name = "kb-playground"
version = "0.1.0"
description = "Experimental high-performance immutable knowledge base with vector-graph hybrid architecture"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "dvc>=3.61.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["kb_playground"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.8.2",
    "pyright>=1.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".ruff_cache",
    ".svn", 
    ".tox",
    ".venv",
    "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "F", "UP", "B", "SIM", "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
