[tool.coverage.run]
branch = true
source = [ "momo_cmd" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../../../coverage/code/libs/python/momo-cmd/html'
 --cov-report xml:'../../../../coverage/code/libs/python/momo-cmd/coverage.xml'
 --html='../../../../reports/code/libs/python/momo-cmd/unittests/html/index.html'
 --junitxml='../../../../reports/code/libs/python/momo-cmd/unittests/junit.xml'
"""

[project]
name = "momo-cmd"
version = "1.0.0"
description = "Universal command interface for MomoAI"
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = [
    "click>=8.1.8",
    "pyyaml>=6.0.2",
]

[project.scripts]
mo = "momo_cmd.cli:mo"

[tool.hatch.build.targets.wheel]
packages = ["momo_cmd"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "pytest-asyncio>=1.1.0",
  "pyright>=1.1.403",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
