[tool.coverage.run]
branch = true
source = [ "momo_kb" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]  
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=momo_kb"
asyncio_mode = "auto"

[project]
name = "momo-kb"
version = "0.1.0"
description = "Momo KnowledgeBase - High-performance, multi-agent, immutable knowledge graph with versioning and rollback"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "dvc>=3.61.0",
    "psutil>=7.0.0",
    "numpy>=2.0.2",
    "faiss-cpu>=1.11.0.post1",
    "openai>=1.99.6",
    "matplotlib>=3.9.4",
]

[tool.hatch.build.targets.wheel]
packages = ["momo_kb"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "pyright>=1.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E", "F", "UP", "B", "SIM", "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
