[tool.poetry]
name = "momo-petals"
version = "0.1.0"
description = "Petals showcase module for distributed inference"
authors = ["MomoAI Team"]
readme = "README.md"
packages = [{include = "momo_petals"}]

[tool.poetry.dependencies]
python = "^3.10"
petals = "^2.3.0"
transformers = "^4.36.0"
torch = "^2.1.0"
pydantic = "^2.5.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "S", "T", "A", "C4", "SIM", "RET"]
ignore = ["E501", "S101"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true