[tool.coverage.run]
branch = true
source = [ "momo_store_document" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]  
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=momo_store_document"
asyncio_mode = "auto"

[project]
name = "momo-store-document"
version = "0.1.0"
description = "Document storage abstraction for Momo AI knowledge base"
requires-python = ">=3.9,<3.13"
readme = 'README.md'
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "duckdb>=0.8.0",
    "momo-logger @ file:///home/vincent/Documents/Momo/MomoAI-nx/code/libs/python/momo-logger",
    "dvc>=3.61.0",
]

[tool.hatch.build.targets.wheel]
packages = ["momo_store_document"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "pyright>=1.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E", "F", "UP", "B", "SIM", "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
