[tool.coverage.run]
branch = true
source = [ "momo_vector_store" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]  
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=momo_vector_store"
asyncio_mode = "auto"

[project]
name = "momo-vector-store"
version = "0.1.0"
description = "Vector store implementation for Momo AI knowledge base"
requires-python = ">=3.9,<3.13"
readme = 'README.md'
dependencies = [
    "pydantic>=2.0.0",
    "langchain-core>=0.3.73",
    "langchain-huggingface>=0.1.0",
    "momo-logger @ file:../momo-logger",
    "dvc>=3.61.0",
]

[tool.hatch.build.targets.wheel]
packages = ["momo_vector_store"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "pyright>=1.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
